Supported "intrinistic height" shrinking in the flex layouting (and thus fixed wrap no shrink bug in chrome)

--- a/web-client/src/main/webapp/static/css/gwt/form/layout/layout.css
+++ b/web-client/src/main/webapp/static/css/gwt/form/layout/layout.css
@@ -2,13 +2,21 @@
 .oppositeSizeCssFixPanel {
 }
 
-.shrink-width {
+.intr-shrink-width {
     max-width: -webkit-fill-available;
     max-width: -moz-available;
 }
-.stretch-width {
+.intr-stretch-width {
     min-width: -webkit-fill-available;
     min-width: -moz-available;
+}
+.intr-shrink-height {
+    max-height: -webkit-fill-available;
+    max-height: -moz-available;
+}
+.intr-stretch-height {
+    min-height: -webkit-fill-available;
+    min-height: -moz-available;
 }
 
 .remove-all-pmb, .remove-all-pmb.form-control, .remove-all-pmb.form-control:focus {
